# FAST-Calib

./: .gitignore  CMakeLists.txt  README.md  package.xml  workflow.md
config/: qr_params.yaml
include/: common_lib.h
launch/: calib.launch  multi_calib.launch
midresult/: circle_center_record.txt
rviz_cfg/: fast_livo2.rviz
src/: data_preprocess.hpp  lidar_detect.hpp  main.cpp  multi_process.hpp  multi_scene.cpp  qr_detect.hpp
